# pbip-compiler

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
pbip_compiler/: __init__.py  cli.py  compiler.py  discovery.py  models.py
pbip_compiler/datamodel/: __init__.py  builder.py  mpatch.py  sources.py
pbip_compiler/pbix/: __init__.py  assembler.py  constants.py
pbip_compiler/report/: __init__.py  layout.py  pbir.py  resources.py
pbip_compiler/semantic_model/: __init__.py  loader.py  tmdl.py  tmdl_table.py  tmsl.py  types.py
